[package]
name = "probable-fiesta"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pf-srv"
path = "src/bin/server.rs"

[[bin]]
name = "pf-cli"
path = "src/bin/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"